2008-01-29  Ben Motmans <ben.motmans@gmail.com> 

	* MonoDevelop.Database.ConnectionManager.mdp: Gtk# 2.8 compatibility

2008-01-28  Ben Motmans <ben.motmans@gmail.com> 

	* NodeBuilders/UsersNodeBuilder.cs,
	  NodeBuilders/ConnectionContextNodeBuilder.cs,
	  NodeBuilders/ViewNodeBuilder.cs, NodeBuilders/TablesNodeBuilder.cs,
	  NodeBuilders/ProceduresNodeBuilder.cs, NodeBuilders/UserNodeBuilder.cs,
	  NodeBuilders/ConnectionContextCollectionNodeBuilder.cs,
	  NodeBuilders/TriggersNodeBuilder.cs, NodeBuilders/TableNodeBuilder.cs,
	  NodeBuilders/ProcedureNodeBuilder.cs, NodeBuilders/ColumnNodeBuilder.cs,
	  NodeBuilders/ViewsNodeBuilder.cs: migration to the improved capabilities
	  system
	* MonoDevelop.Database.ConnectionManager.addin.xml,
	  Commands/ConnectionManagerCommands.cs: modified the behavior of the Add
	  Connection and Create Database command
	* Commands/ToolbarCommands.cs, ConnectionManagerPad.cs: the connection
	  manager pad now supports a toolbar

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.ConnectionManager.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.ConnectionManager.addin.xml: Updated add-in category
	  and description.

2007-12-22  Ben Motmans <ben.motmans@gmail.com> 

	* NodeBuilders/ColumnsNodeBuilder.cs: removed temporary debug statement

2007-12-22  Ben Motmans <ben.motmans@gmail.com> 

	* NodeBuilders/ParametersNodeBuilder.cs, NodeBuilders/ColumnsNodeBuilder.cs:
	  Add multiple children inside a single dispatch [fixes #339726]

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.ConnectionManager.mdp: Updated project file. The
	  order of extended properties won't change anymore.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.ConnectionManager.addin.xml: Bump add-in versions.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 
